# SmartCV

./: .gitignore  01_📃_Analisador_de_Currículos.py  Dockerfile  README.md  pyproject.toml  results_Currículo3.csv  style.css
.streamlit/: config.toml  config_dark_mode.toml
core/: prompts.py  utils.py
pages/: 02_🔎_Triagem_Inteligente_Portfolio.py  03_🎯_Otimizador_de_Currículos.py
projeto_llms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
